objects/Agreement_Template__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Master_Agreement_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Clause_Origin__c</fullName>
        <description>Defines if clauses for this Agreement Template will originate from the HotDocs Interview or Condition Templates that exist for this Agreement Template.</description>
        <inlineHelpText>Defines if clauses for this Agreement Template will originate from the HotDocs Interview or Condition Templates that exist for this Agreement Template.</inlineHelpText>
        <label>Clause Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>HotDocs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Interest_Rate_Type__c</fullName>
        <label>Facility Interest Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotDocs_Template_ID__c</fullName>
        <label>HotDocs Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Jurisdiction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuggestedTags__c</fullName>
        <label>Suggested Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_Code__c</fullName>
        <label>Template Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Template_Version__c</fullName>
        <label>Template Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agreement_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Master_Agreement_Version</valueSetName>
        </valueSet>
    </fields>
    <label>Agreement Template</label>
    <listViews>
        <fullName>Libra_Templates</fullName>
        <columns>NAME</columns>
        <columns>HotDocs_Template_ID__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement_Template__c.Agreement_Template_Master</value>
        </filters>
        <label>Libra Templates</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Templates</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Template_Legal</fullName>
        <active>true</active>
        <label>Agreement Template - Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agreement_Template_Master</fullName>
        <active>true</active>
        <description>Agreement Template for Libra</description>
        <label>Agreement Template - Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agreement_Template_TMG</fullName>
        <active>true</active>
        <label>Agreement Template - TMG</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>